--- a/AmigoDono.Web/AmigoDono.Web.csproj
+++ b/AmigoDono.Web/AmigoDono.Web.csproj
@@ -231,12 +231,12 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Scripts\Views\Web.config" />
-    <Content Include="Scripts\Views\Shared\_ViewStart.cshtml" />
-    <Content Include="Scripts\Views\Shared\Error.cshtml" />
-    <Content Include="Scripts\Views\Shared\_Layout.cshtml" />
-    <Content Include="Scripts\Views\Adocao\Index.cshtml" />
-    <Content Include="Scripts\Views\DENUNCIA\Create.cshtml" />
+    <Content Include="Views\Web.config" />
+    <Content Include="Views\Shared\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Adocao\Index.cshtml" />
+    <Content Include="Views\DENUNCIA\Create.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -246,8 +246,8 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Scripts\Views\Login\Index.cshtml" />
-    <Content Include="Scripts\Views\Home\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
