--- a/AmigoDono.Web/packages.config
+++ b/AmigoDono.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="4.1.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.6.4" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
