--- a/AmigoDono.Web/AmigoDono.Web.csproj
+++ b/AmigoDono.Web/AmigoDono.Web.csproj
@@ -179,7 +179,7 @@
     <Content Include="Content\images\ui-icons_777777_256x240.png" />
     <Content Include="Content\images\ui-icons_cc0000_256x240.png" />
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\css\jquery-ui.css" />
     <Content Include="Content\css\jquery-ui.structure.css" />
     <Content Include="Content\css\jquery-ui.theme.css" />
     <Content Include="favicon.ico" />
