--- a/AmigoDono.Web/AmigoDono.Web.csproj
+++ b/AmigoDono.Web/AmigoDono.Web.csproj
@@ -215,6 +215,7 @@
     <Content Include="Content\css\bootstrap-grid.min.css.map" />
     <Content Include="Content\css\bootstrap-grid.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Content\css\fontawesome.css" />
     <Content Include="Scripts\inputmask\bindings\inputmask.binding.js" />
     <Content Include="Scripts\inputmask\bindings\inputmask.binding.min.js" />
     <Content Include="Scripts\inputmask\dependencyLibs\inputmask.dependencyLib.jqlite.js" />
@@ -300,7 +301,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Login\Signin.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\AMIGO\Create.cshtml" />
   </ItemGroup>
