--- a/AmigoDono.Web/AmigoDono.Web.csproj
+++ b/AmigoDono.Web/AmigoDono.Web.csproj
@@ -197,7 +197,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AMIGOController.cs" />
     <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -206,6 +205,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\DENUNCIAController.cs" />
+    <Compile Include="Controllers\AMIGOController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap-grid.css" />
@@ -406,13 +406,17 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Login\Signin.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\AMIGO\Create.cshtml" />
     <Content Include="Views\Feedback\FaleConosco.cshtml" />
     <Content Include="Views\DENUNCIA\Create.cshtml" />
     <Content Include="Views\DENUNCIA\Delete.cshtml" />
     <Content Include="Views\DENUNCIA\Details.cshtml" />
     <Content Include="Views\DENUNCIA\Edit.cshtml" />
     <Content Include="Views\DENUNCIA\Index.cshtml" />
+    <Content Include="Views\AMIGO\Create.cshtml" />
+    <Content Include="Views\AMIGO\Delete.cshtml" />
+    <Content Include="Views\AMIGO\Details.cshtml" />
+    <Content Include="Views\AMIGO\Edit.cshtml" />
+    <Content Include="Views\AMIGO\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
