--- a/AmigoDono.Control/AmigoDono.Control.csproj
+++ b/AmigoDono.Control/AmigoDono.Control.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CAmigo.cs" />
     <Compile Include="CControle.cs" />
     <Compile Include="CDenuncia.cs" />
+    <Compile Include="CFeedback.cs" />
     <Compile Include="CPet.cs" />
     <Compile Include="CTratamento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
