--- a/AmigoDono.View/App.config
+++ b/AmigoDono.View/App.config
@@ -1,23 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-      <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+      
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AmigoDono.View.Properties.Settings.AmigoDonoConnectionString"
-      connectionString="Data Source=RAFA-NOTE;Initial Catalog=Amigos_do_Dono;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="AmigoDono.View.Properties.Settings.Amigos_do_DonoConnectionString"
-      connectionString="Data Source=NOTCASSIANO\CASSIANO;Initial Catalog=Amigos_do_Dono;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="AmigoDono.View.Properties.Settings.ConnectionString"
-      connectionString="Data Source=NOTCASSIANO\CASSIANO;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="AmigoDono.View.Properties.Settings.Amigos_do_DonoConnectionString1"
-      connectionString="Data Source=NOTCASSIANO\CASSI;Initial Catalog=Amigos_do_Dono;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AmigoDono.View.Properties.Settings.AmigoDonoConnectionString" connectionString="Data Source=RAFA-NOTE;Initial Catalog=Amigos_do_Dono;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AmigoDono.View.Properties.Settings.Amigos_do_DonoConnectionString" connectionString="Data Source=NOTCASSIANO\CASSIANO;Initial Catalog=Amigos_do_Dono;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AmigoDono.View.Properties.Settings.ConnectionString" connectionString="Data Source=NOTCASSIANO\CASSIANO;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AmigoDono.View.Properties.Settings.Amigos_do_DonoConnectionString1" connectionString="Data Source=NOTCASSIANO\CASSI;Initial Catalog=Amigos_do_Dono;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -32,4 +24,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
