--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -15,7 +15,8 @@
     <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <connectionStrings>
-  <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
