--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -15,16 +15,16 @@
     <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 </connectionStrings>
   <system.web>
     <authentication mode="Forms">
-      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Home/Index/"></forms>
+      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Login/Signin/"></forms>
     </authentication>
     <authorization>
-      <!--<allow users="*"/>-->
-      <deny users="?"/>
+      <allow users="*"/>
+      <!--<deny users="?"/>-->
     </authorization>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -35,10 +35,10 @@
 
   
   <!-- NECESSÁRIO POIS SENÃO NÃO ACIONA OS MÉTODOS DA PÁGINA DE LOGIN />-->
-  <location path="Login">
+  <location path="FEEDBACK">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <deny users="?"/>
       </authorization>
     </system.web>
   </location>
