--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -19,12 +19,13 @@
     <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
   <system.web>
-    <authentication mode="Forms">
-      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Home/Index/"></forms>
+    <sessionState mode="InProc" timeout="25"></sessionState>
+    <authentication mode="Forms">    
+      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Login/Signin/"></forms>
     </authentication>
     <authorization>
-      <!--<allow users="*"/>-->
-      <deny users="?"/>
+      <allow users="*"/>
+      <!--<deny users="?"/>-->
     </authorization>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -42,6 +43,24 @@
       </authorization>
     </system.web>
   </location>
+  
+    <location path="DADOS">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+    
+   <location path="Home">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
   
   
   <runtime>
