--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -19,6 +19,7 @@
     <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 </connectionStrings>
   <system.web>
+    <sessionState mode="InProc" timeout="25"></sessionState>
     <authentication mode="Forms">
       <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Login/Signin/"></forms>
     </authentication>
