--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ bld/
 [Ll]og/
 bin/*
 *.dll
-*/db.lock
+.vs/AmigoDono/v15/Server/sqlite3/db.lock
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
