--- a/AmigoDono.Web/packages.config
+++ b/AmigoDono.Web/packages.config
@@ -21,6 +21,7 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
