--- a/AmigoDono.Web/packages.config
+++ b/AmigoDono.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="4.1.3" targetFramework="net461" />
   <package id="Caelum.Stella.CSharp" version="1.4.7" targetFramework="net461" />
   <package id="cldrjs" version="0.5.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
