--- a/AmigoDono.Model/AmigoDono.Model.csproj
+++ b/AmigoDono.Model/AmigoDono.Model.csproj
@@ -67,7 +67,6 @@
       <DependentUpon>ModelClasses.tt</DependentUpon>
     </Compile>
     <Compile Include="Helper\Constantes.cs" />
-    <Compile Include="Helper\CustomValidator\Util.cs" />
     <Compile Include="Helper\Data.cs" />
     <Compile Include="Helper\Mensagens.cs" />
     <Compile Include="Helper\Perfil.cs" />
@@ -111,12 +110,6 @@
     <Compile Include="Repositories\RepositoryDenuncia.cs" />
     <Compile Include="Repositories\RepositoryPet.cs" />
     <Compile Include="Repositories\RepositoryTratamento.cs" />
-    <Compile Include="sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>ModelClasses.tt</DependentUpon>
-    </Compile>
-    <Compile Include="sp_helpdiagrams_Result.cs">
-      <DependentUpon>ModelClasses.tt</DependentUpon>
-    </Compile>
     <Compile Include="TIPOTRATAMENTO.cs">
       <DependentUpon>ModelClasses.tt</DependentUpon>
     </Compile>
@@ -146,7 +139,6 @@
     </EntityDeploy>
     <None Include="ModelClasses.edmx.diagram">
       <DependentUpon>ModelClasses.edmx</DependentUpon>
-      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -166,6 +158,9 @@
       <DependentUpon>ModelClasses.edmx</DependentUpon>
       <LastGenOutput>ModelClasses.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helper\CustomValidator\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
