--- a/AmigoDono.View/AmigoDono.View.csproj
+++ b/AmigoDono.View/AmigoDono.View.csproj
@@ -32,9 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -54,7 +57,10 @@
       <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.1016.290\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,15 +82,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Amigos_do_DonoDataSet10.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Amigos_do_DonoDataSet11.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Amigos_do_DonoDataSet11.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Amigos_do_DonoDataSet111.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Amigos_do_DonoDataSet111.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Amigos_do_DonoDataSet12.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Amigos_do_DonoDataSet12.xsd</DependentUpon>
     </Compile>
     <Compile Include="Amigos_do_DonoDataSet121.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -171,7 +177,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Amigos_do_DonoDataSet8.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Amigos_do_DonoDataSet9.Designer.cs" />
     <Compile Include="Amigos_do_DonoDoador.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -404,6 +409,17 @@
     <None Include="Amigos_do_DonoDataSet10.xss">
       <DependentUpon>Amigos_do_DonoDataSet10.xsd</DependentUpon>
     </None>
+    <None Include="Amigos_do_DonoDataSet11.xsc">
+      <DependentUpon>Amigos_do_DonoDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="Amigos_do_DonoDataSet11.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Amigos_do_DonoDataSet11.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Amigos_do_DonoDataSet11.xss">
+      <DependentUpon>Amigos_do_DonoDataSet11.xsd</DependentUpon>
+    </None>
     <None Include="Amigos_do_DonoDataSet111.xsc">
       <DependentUpon>Amigos_do_DonoDataSet111.xsd</DependentUpon>
     </None>
@@ -414,17 +430,6 @@
     </None>
     <None Include="Amigos_do_DonoDataSet111.xss">
       <DependentUpon>Amigos_do_DonoDataSet111.xsd</DependentUpon>
-    </None>
-    <None Include="Amigos_do_DonoDataSet12.xsc">
-      <DependentUpon>Amigos_do_DonoDataSet12.xsd</DependentUpon>
-    </None>
-    <None Include="Amigos_do_DonoDataSet12.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>Amigos_do_DonoDataSet12.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Amigos_do_DonoDataSet12.xss">
-      <DependentUpon>Amigos_do_DonoDataSet12.xsd</DependentUpon>
     </None>
     <None Include="Amigos_do_DonoDataSet121.xsc">
       <DependentUpon>Amigos_do_DonoDataSet121.xsd</DependentUpon>
@@ -732,6 +737,7 @@
     <None Include="Resources\aparecida.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
