--- a/AmigoDono.View/App.config
+++ b/AmigoDono.View/App.config
@@ -1,13 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
       <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
-  <connectionStrings>
-    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTCASSIANO\CASSI;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\MSSQLRAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -21,4 +17,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\MSSQLRAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  </connectionStrings>
 </configuration>
