--- a/AmigoDono.Web/packages.config
+++ b/AmigoDono.Web/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+<packages xmlns="urn:packages">
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootbox" version="4.3.0" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
@@ -15,6 +15,7 @@
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.9.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.9.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.9.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.9.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.9.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
